feat: create modules structure
